--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "zendframework/skeleton-application",
-    "description": "Skeleton Application for Zend Framework zend-mvc applications",
+    "name": "yawik/standard",
+    "description": "Skeleton for Yawik Applications",
     "type": "project",
-    "license": "BSD-3-Clause",
+    "license": "MIT",
     "keywords": [
         "framework",
         "mvc",
@@ -12,13 +12,13 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^5.6 || ^7.0",
-        "zendframework/zend-component-installer": "^1.0 || ^0.7 || ^1.0.0-dev@dev",
-        "zendframework/zend-mvc": "^3.0.1",
-        "zfcampus/zf-development-mode": "^3.0",
+        "php": "^5.6 || ^7.0 || ^7.1 || 7.2",
         "yawik/core": "^0.32@dev",
-        "yawik/demo-skin": "^0.32@dev",
-        "yawik/behat": "^0.32@dev"
+        "yawik/demo-skin": "^0.32@dev"
+    },
+    "require-dev": {
+        "zendframework/zend-test": "^3.2",
+        "yawik/behat": "0.32.x-dev"
     },
     "autoload": {
         "psr-4": {
@@ -37,19 +37,19 @@
     },
     "extra": [],
     "scripts": {
-        "cs-check": "phpcs",
-        "cs-fix": "phpcbf",
-        "development-disable": "zf-development-mode disable",
-        "development-enable": "zf-development-mode enable",
-        "development-status": "zf-development-mode status",
+        "auto-scripts": [
+            "@install-assets",
+            "npm install"
+        ],
         "install-assets": "./vendor/bin/yawik assets:install --relative",
         "post-create-project-cmd": [
-            "@development-enable"
+            "@auto-scripts"
         ],
-        "serve": "php -S 0.0.0.0:8080 -t public public/index.php",
-        "test": "phpunit"
-    },
-    "require-dev": {
-        "zendframework/zend-test": "^3.2"
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ]
     }
 }
