added custom installation paths for yawik modules ref #1

--- a/config/autoload/development.local.php.dist
+++ b/config/autoload/development.local.php.dist
@@ -19,4 +19,11 @@ return [
     'view_manager' => [
         'display_exceptions' => true,
     ],
+    'doctrine' => [
+        'configuration' => [
+            'odm_default' => [
+                'default_db' => 'YAWIK_TEST'
+            ]
+        ]
+    ]
 ];
