--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": "^5.6 || ^7.0 || ^7.1 || 7.2",
         "yawik/core": "^0.32@dev",
-        "yawik/demo-skin": "^0.32@dev"
+        "yawik/demo-skin": "^0.32@dev",
+        "composer/installers": "^1.0"
     },
     "require-dev": {
         "zendframework/zend-test": "^3.2",
@@ -38,6 +39,10 @@
     "extra": {
         "branch-alias": {
             "dev-master": "0.32-dev"
+        },
+        "installer-types": ["yawik-module"],
+        "installer-paths": {
+            "modules/{$name}": ["type:yawik-module"]
         }
     },
     "scripts": {
@@ -45,7 +50,7 @@
             "@install-assets",
             "npm install"
         ],
-        "install-assets": "./vendor/bin/yawik assets:install --relative",
+        "install-assets": "./vendor/bin/yawik assets-install --relative",
         "post-create-project-cmd": [
             "@auto-scripts"
         ],
