--- a/.travis.yml
+++ b/.travis.yml
@@ -51,24 +51,5 @@ before_script:
   - chmod 777 build/behat
 
 script:
-  - 'if [[ $COVERAGE = yes ]]; then
-        ./vendor/bin/phpunit --verbose --coverage-clover=build/logs/clover.xml --coverage-php=build/logs/clover.serialized;
-    else
-        ./vendor/bin/phpunit --verbose;
-    fi'
-  # only run behat tests when not collecting coverage
-  - if [[ $COVERAGE != yes ]]; then ./vendor/bin/behat --strict --no-interaction; fi
-
-after_failure:
-  - "./vendor/lakion/mink-debug-extension/travis/tools/upload-textfiles \"build/behat/*.log\""
-  - "./vendor/lakion/mink-debug-extension/travis/tools/upload-textfiles \"var/log/*.log\""
-  - "./vendor/lakion/mink-debug-extension/travis/tools/upload-textfiles \"var/log/tracy/*.*\""
-  - "IMGUR_CLIENT_ID=bec050c54e1bb52 ./vendor/bin/imgur-uploader build/behat/*.png"
-
-after_script:
-  - 'if [[ $COVERAGE = yes ]]; then
-        composer require php-coveralls/php-coveralls;
-        travis_retry ./vendor/bin/php-coveralls -vvv;
-        wget https://scrutinizer-ci.com/ocular.phar;
-        travis_retry php ocular.phar code-coverage:upload --format=php-clover build/logs/clover.serialized;
-    fi'
+  - ./vendor/bin/phpunit
+  - ./vendor/bin/behat
