--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,9 @@ install:
 before_script:
   # behat preparation
   - 'if [[ $COVERAGE != yes ]]; then
-      composer run start-selenium --timeout=0 > /dev/null 2>&1 &
+      ./vendor/bin/start-selenium > /dev/null 2>&1 &
       sleep 5;
-      composer run serve --timeout=0 > /dev/null 2>&1 &
+      php -S localhost:8080 > /dev/null 2>&1 &
       sleep 3;
     fi'
   - mkdir -p build/behat
