upgraded demo-skin module to latest version

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
             "npm install"
         ],
         "install-assets": "./vendor/bin/yawik assets-install --relative",
+        "serve": "php -S localhost:8080 -t public/",
         "post-create-project-cmd": [
             "@auto-scripts"
         ],
