--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^5.6 || ^7.0 || ^7.1 || 7.2",
+        "zendframework/zend-component-installer": "^1.0 || ^0.7 || ^1.0.0-dev@dev",
         "yawik/core": "^0.32@dev",
         "yawik/demo-skin": "^0.32@dev",
         "composer/installers": "^1.0"
