configured composer to use zend-component-installer ^2.0 ref yawik/standard#3 cross-solution/YAWIK#506

--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,11 @@
     "prefer-stable": true,
     "require": {
         "php": "^5.6 || ^7.0 || ^7.1 || 7.2",
-        "zendframework/zend-component-installer": "^1.0 || ^0.7 || ^1.0.0-dev@dev",
-        "yawik/core": "^0.32@dev",
-        "yawik/demo-skin": "^0.32@dev",
-        "composer/installers": "^1.0"
+        "zendframework/zend-component-installer": "^2.0",
+        "yawik/core": ">=0.32@dev",
+        "yawik/demo-skin": ">=0.32@dev",
+        "composer/installers": "^1.0",
+        "yawik/orders": ">=0.32@dev"
     },
     "require-dev": {
         "zendframework/zend-test": "^3.2",
@@ -35,7 +36,8 @@
     "config": {
         "platform": {
             "ext-mongo": "1.6.16"
-        }
+        },
+        "process-timeout": 0
     },
     "extra": {
         "branch-alias": {
