improved grunt to automatically added Gruntfile.js in modules directory

--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     "prefer-stable": true,
     "require": {
         "php": "^5.6 || ^7.0 || ^7.1 || 7.2",
-        "zendframework/zend-component-installer": "^1.1 | ^2.0",
-        "yawik/core": ">=0.32@dev",
         "composer/installers": "^1.0",
-        "yawik/composer-plugin": ">=0.32@dev"
+        "yawik/core": ">=0.32@dev",
+        "yawik/orders": ">=0.32@dev",
+        "zendframework/zend-component-installer": "^1.1 | ^2.0"
     },
     "require-dev": {
         "zendframework/zend-test": "^3.2",
@@ -36,7 +36,8 @@
         "platform": {
             "ext-mongo": "1.6.16"
         },
-        "process-timeout": 0
+        "process-timeout": 0,
+        "sort-packages": true
     },
     "extra": {
         "branch-alias": {
