--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "scripts": {
     "postinstall": "grunt"
   },
+  "license": "MIT",
+  "repository": "https://github.com/yawik/standard",
   "private": false,
   "devDependencies": {
-    "yawik-core": "public/modules/Core",
     "grunt": "^1.0.3",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
@@ -14,6 +15,8 @@
     "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
-    "load-grunt-tasks": "^4.0.0"
-  }
+    "load-grunt-tasks": "^4.0.0",
+    "yawik-core": "public/modules/Core"
+  },
+  "dependencies": {}
 }
