--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": "^5.6 || ^7.0 || ^7.1 || 7.2",
         "composer/installers": "^1.0",
+        "yawik/composer-plugin": ">=0.32@dev",
         "yawik/core": ">=0.32@dev",
         "yawik/orders": ">=0.32@dev",
         "zendframework/zend-component-installer": "^1.1 | ^2.0"
@@ -48,6 +49,7 @@
             "modules/{$name}": ["type:yawik-module"]
         },
         "zf": {
+            
             "component-whitelist": [
                 "DoctrineModule",
                 "DoctrineMongoODMModule",
