--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {
         "php": "^5.6 || ^7.0 || ^7.1 || 7.2",
         "composer/installers": "^1.0",
-        "yawik/application-pack": "^0.32",
+        "yawik/application-pack": ">=0.33@dev",
         "zendframework/zend-component-installer": "^1.1 | ^2.0"
     },
     "require-dev": {
