--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "load-grunt-tasks": "^4.0.0",
-    "yawik-core": "public/modules/Core"
+    "yawik-core": "public/modules/Core",
+    "chromedriver": "^75.0"
   },
   "dependencies": {}
 }
