--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "repository": "https://github.com/yawik/standard",
   "private": false,
   "devDependencies": {
-    "grunt": "^1.0.3",
+    "chromedriver": "^75.0",
+    "grunt": "^1.0.4",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^3.0.0",
@@ -16,8 +17,7 @@
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "load-grunt-tasks": "^4.0.0",
-    "yawik-core": "public/modules/Core",
-    "chromedriver": "^75.0"
+    "yawik-core": "public/modules/Core"
   },
   "dependencies": {}
 }
